# spdx3-validate

./: README.md  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  test.yaml  typecheck.yaml
src/spdx3_validate/: __init__.py  __main__.py  core.py  errors.py  main.py  result.py  spdx_versions.py  version.py
tests/: test_import.py  test_validate.py
tests/data/3.0.1/invalid/: package_sbom_missing_creationinfo.json
