[project]
name = "spdx3-validate"
description = "Validates SPDX 3 data files"
dynamic = ["version"]
dependencies = [
    "rdflib >= 7.0.0",
    "jsonschema >= 4.21.1",
    "pyshacl >= 0.25.0",
    "halo >= 0.0.31",
]
requires-python = ">= 3.8"
authors = [
    {name = "Joshua Watt", email = "JPEWhacker@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "flake8 >= 7.0.0",
    "mypy >= 1.14.1",
    "pylint >= 3.2.7",
    "pytest >= 7.4",
    "pytest-cov >= 4.1",
    "pytest-xdist >= 3.5",
    "types-jsonschema >= 4.23.0.20241208",
]

[project.urls]
Homepage = "https://github.com/JPEWdev/spdx3-validate"
Repository = "https://github.com/JPEWdev/spdx3-validate.git"
Issues = "https://github.com/JPEWdev/spdx3-validate/issues"

[project.scripts]
spdx3-validate = "spdx3_validate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/spdx3_validate/version.py"

[tool.mypy]
python_version = "3.8"
strict = true
files = ["src/spdx3_validate", "tests"]

[[tool.mypy.overrides]]
module = ["halo"]
ignore_missing_imports = true

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "unused-argument",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--cov=spdx3_validate",
    "-n", "auto",
]

[tool.coverage.run]
relative_files = true
